--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,22 @@ android {
             includeAndroidResources = true
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    def room_version = "2.4.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.5.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     //testImplementation 'org.mockito:mockito-core:4+'
     //testImplementation 'org.objenesis:objenesis:+'
