--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="ar.edu.ips.aus.seminario2.tetrominos">
 
     <application
-        android:name=".Game"
+        android:name="ar.edu.ips.aus.seminario2.tetrominos.app.Game"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,13 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tetrominos"
         tools:targetApi="31">
-        <!-- TODO TP1 provide startup activity to select initial level. -->
         <activity
-            android:name=".GameMainActivity"
+            android:name=".infra.ui.HallOfFameActivity"
+            android:exported="false"
+            android:label="@string/title_activity_hall_of_fame"
+            android:theme="@style/Theme.Tetrominos.NoActionBar" />
+        <activity
+            android:name=".infra.ui.GameMainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
