--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'ar.edu.ips.aus.seminario2.tetrominos'
 }
 
 dependencies {
